Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58932

ApplicationWindow documentation contains contentData property which does not exist

XMLWordPrintable

    • 94e53934555757b12a40ea17009ea43f2121e485

      Can be found in here:

      http://doc.qt.io/qt-5/qml-qtquick-controls2-applicationwindow.html#contentData-prop

      That does not exist, but c++ interface contains contentData function, which is used as a read function for data property. Therefore, this property should be named "data" instead.

        For Gerrit Dashboard: QTBUG-58932
        # Subject Branch Project Status CR V

            Unassigned Unassigned
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes